<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="username_hint">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">Please confirm your password</string>
    <string name="submit">SUBMIT</string>
</resources>
