<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/fields"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_username"
                android:text="@string/username"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_username"
                android:layout_weight="75"
                android:hint="@string/username_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_password"
                android:text="@string/password"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_password"
                android:layout_weight="75"
                android:hint="@string/password_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_confirm_password"
                android:text="@string/confirm_password"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_weight="75"
                android:hint="@string/confirm_password_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_below="@id/fields"
        android:layout_alignEnd="@id/fields"
        android:layout_alignRight="@id/fields"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
